# sape

./: .dockerignore  .gitignore  .opencodeignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  codecov.yml  deno.jsonc  docker-compose.yml  typos.toml
.github/workflows/: code-quality.yaml  coverage.yaml  deno.yaml  rust.yaml
docs/: architecture.md  comparison.md
docs/diagrams/: jump_flow.mmd  jump_flow.txt  local_forward_flow.mmd  local_forward_flow.txt  mdns_flow.mmd  mdns_flow.txt  netcat_flow.mmd  netcat_flow.txt  reverse_forward_flow.mmd  reverse_forward_flow.txt  socks_proxy_flow.mmd  socks_proxy_flow.txt
scripts/: build_arm64.ts  render_diagrams.ts
src/: cli.rs  interactive.rs  jump.rs  lib.rs  main.rs  netcat.rs  pairing.rs  protocol.rs  relay.rs  tunnel.rs  types.rs
src/client/: builder.rs  dial.rs  listen.rs  mod.rs  swarm.rs
src/forward/: local.rs  mod.rs  reverse.rs  socks5.rs
tests/: constants.ts  e2e_setup.ts  helpers.ts  mdns_forward_test.ts  mdns_netcat_test.ts  mdns_reverse_forward_test.ts  mdns_socks5_test.ts  relay_forward_test.ts  relay_http_connect_test.ts  relay_netcat_test.ts  relay_pairing_code_test.ts  relay_reverse_forward_test.ts  relay_socks5_test.ts
