[package]
name = "sape"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6" }
inquire = { version = "0.7" }
fast-socks5 = { version = "1.0" }
futures = { version = "0.3" }
libp2p = { version = "0.56", features = ["autonat", "dcutr", "dns", "identify", "macros", "mdns", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "upnp", "websocket", "yamux"] }
libp2p-stream = { version = "0.4.0-alpha" }
postcard = { version = "1.1", features = ["alloc"] }
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
tokio = { version = "1.44", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
